binread/tests/errors/enum_missing_magic_repr.rs
use binread::BinRead;

#[derive(BinRead)]
enum UnitEnum {
    A,
}

fn main() {}
